--- a/API-GATEWAY.properties
+++ b/API-GATEWAY.properties
@@ -1,5 +1,5 @@
 server.port=8080
-#spring.application.name=API-GATEWAY
+spring.application.name=API-GATEWAY
 #spring.config.import=optional:configserver:http://localhost:8888/
 #
 #spring.cloud.gateway.discovery.locator.enabled=true
@@ -16,4 +16,4 @@ spring.cloud.gateway.routes[1].id=STUDENT-SERVICE
 spring.cloud.gateway.routes[1].uri=lb://STUDENT-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path= /student/**
 
-management.tracing.sampling.probability=1.0
+# management.tracing.sampling.probability=1.0
