--- a/STUDENT-SERVICE.properties
+++ b/STUDENT-SERVICE.properties
@@ -1,7 +1,7 @@
 server.port=8082
 spring.application.name=STUDENT-SERVICE
 
-spring.config.import=optional:configserver:http://localhost:8888/
+# spring.config.import=optional:configserver:http://localhost:8888/
 #spring.profiles.active=native
 #
 #
