--- a/SCHOOL-SERVICE.properties
+++ b/SCHOOL-SERVICE.properties
@@ -2,21 +2,13 @@ server.port=8081
 spring.application.name=SCHOOL-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888/
 
-# spring.datasource.url=jdbc:mysql://localhost:3306/microservice
-# spring.datasource.username=root
-# spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/microservice
+spring.datasource.username=root
+spring.datasource.password=root
 
-# spring.jpa.show-sql=true 
-# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true 
+spring.jpa.hibernate.ddl-auto=update
 
-# eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-
-# eureka.client.eureka-server-port=8761
-# eureka.instance.prefer-ip-address=true
-# eureka.instance.hostname=localhost
-
-#Zipkin
-# management.tracing.sampling.probability=1.0
 
 # Resilience circuitbreakers
 management.health.circuitbreakers.enabled=true
