--- a/STUDENT-SERVICE.properties
+++ b/STUDENT-SERVICE.properties
@@ -3,16 +3,13 @@ spring.application.name=STUDENT-SERVICE
 
 # spring.config.import=optional:configserver:http://localhost:8888/
 #spring.profiles.active=native
-#
-#
-#spring.datasource.url=jdbc:mysql://localhost:3306/microservice
-#spring.datasource.username=root
-#spring.datasource.password=root
-#
-#spring.jpa.show-sql=true 
-#spring.jpa.hibernate.ddl-auto=update
-#
-#
-#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-#
+
+spring.datasource.url=jdbc:mysql://localhost:3306/microservice
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.show-sql=true 
+spring.jpa.hibernate.ddl-auto=update
+
+
 #management.tracing.sampling.probability=1.0
